# Project-blockchain

./: .gitignore  SETUP.md  docker-compose.yml
.claude/: launch.json
.github/workflows/: ci.yml  deploy-frontend.yml
UIhomepageproject/: package.json  postcss.config.js  tailwind.config.js  vite.config.js
blockchain/: .env.example  hardhat.config.js  package-lock.json  package.json
blockchain/contracts/: ArtBondingCurve.sol  ArtFactory.sol
blockchain/scripts/: deploy.js  seed.js  verify.js
blockchain/test/: ArtBondingCurve.test.js  ArtFactory.test.js
curve-wasm/: Cargo.toml
curve-wasm/src/: lib.rs
frontend/: next.config.js  package-lock.json  package.json
frontend/app/: error.tsx  globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/admin/: page.tsx
frontend/app/board/: page.tsx
frontend/app/chat/: page.tsx
frontend/app/create/: page.tsx
frontend/app/explore/: page.tsx
frontend/app/live/: page.tsx
frontend/app/support/: page.tsx
frontend/app/terminal/: page.tsx
frontend/components/: ArtworkCard.tsx  Navbar.tsx  PriceChart.tsx  Sidebar.tsx  TradePanel.tsx  VolumetricSpotlight.tsx
frontend/components/ui/: ErrorBoundary.tsx  Skeleton.tsx  Toast.tsx
frontend/lib/: api.ts  config.ts  contracts.ts  demo.ts  hooks.ts  ipfs.ts  wagmi.ts
frontend/lib/abis/: ArtBondingCurve.json  (+1 more)
indexer/: .env.example  Dockerfile  package-lock.json  package.json
indexer-go/: .env.example  Dockerfile  go.mod  go.sum
indexer-go/cmd/: main.go
indexer/prisma/: schema.prisma
indexer/src/: config.ts  index.ts
shared/: bondingCurve.ts
(+24 files in other folders)
