[package]
name    = "curve-wasm"
version = "0.1.0"
edition = "2021"
description = "ArtCurve bonding curve math — compiled to WebAssembly"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"

[profile.release]
# Smallest possible binary — speed is secondary for pure math
opt-level = "z"
lto       = true
panic     = "abort"
